# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2

*portage-1.8.9 (30 Mar 2002)

  30 Mar 2002; Daniel Robbins <drobbins@gentoo.org> portage.py: tiny cosmetic
  fix for digest generation.
  
  30 Mar 2002; Daniel Robbins <drobbins@gentoo.org> emerge: entries in the
  world profile will be ignored if at least one version of the package in
  question isn't already merged.  Prevents "--update world" from remerging
  packages that have since been unmerged.
  
  30 Mar 2002; Daniel Robbins <drobbins@gentoo.org> various: changing all
  references from /usr/bin/python to /usr/bin/python2.2.
  
  30 Mar 2002; Daniel Robbins <drobbins@gentoo.org> db-update.py: moving this
  script here from FILESDIR.
  
  30 Mar 2002; Daniel Robbins <drobbins@gentoo.org> portage.py: stuff doesn't
  get added to the world profile if it is already an essential ("*") package in
  the system profile.  Keeps things clean and flexible.

*portage-1.8.9_pre38 (30 Mar 2002)

  30 Mar 2002; Daniel Robbins <drobbins@gentoo.org> portage.py: resolve_key()
  didn't call load() on mapped virtuals, resulting in inconsistent resolution
  of virtual keys.  Now fixed; thanks to woodchip for the bug report.

*portage-1.8.9_pre37 (30 Mar 2002)

  30 Mar 2002; Daniel Robbins <drobbins@gentoo.org> portage.py: specific
  provides (dev-lang/python-2.2) will be converted to their generic form
  (dev-lang/python) before being recorded.

*portage-1.8.9_pre36 (30 Mar 2002)

  30 Mar 2002; Daniel Robbins <drobbins@gentoo.org> portage.py, emerge: new
  virtuals fixes and a db-upgrade.py script in the ebuild to solve another
  virtuals problem.

*portage-1.8.9_pre35 (29 Mar 2002)

  29 Mar 2002; Daniel Robbins <drobbins@gentoo.org> portage.py, emerge: digest
  generation fixes; emerge --update will now update dependents even if the main
  package hasn't been updated.  getdict() fix, fixing a traceback.

*portage-1.8.9_pre34 (28 Mar 2002)
